# http.rs

./: .gitignore  Cargo.toml  README.md  b.sh
app/: Cargo.toml
app/src/: main.rs
httpRs/: Cargo.toml
httpRs/src/: h2.rs  lib.rs  parse.rs  request.rs  response.rs  router.rs  tls.rs  types.rs
src/: main.rs  parse.rs  request.rs  response.rs  router.rs
views/: index.html
