[package]
name = "httpRs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
bytes = "1.5.0"
h2 = "0.3.21"
http = "0.2.9"
rustls = "0.21.7"
rustls-pemfile = "1.0.3"
serde = {version = "1.0.188",features = ["derive"]}
serde_json = "1.0.107"
tokio = { version= "1.32.0", features = ["full"]}
tokio-rustls = "0.24.1"
webpki = "0.22.4"
